--- a/app/scss/util/_breakpoints.scss
+++ b/app/scss/util/_breakpoints.scss
@@ -2,18 +2,20 @@
 
 // Mixin definitions for breakpoints (up and down)
 
-// 700px, 900px, 1440px
+// 375px, 900px, 1440px
 $breakpoint-up: (
+  "small": f.em(375),
   "medium": f.em(700),
-  "large": f.em(900),
+  "large": f.em(1024),
   "xlarge": f.em(1440),
 );
 
 // 699.98px, 899.98px, 1439.98px
 $breakpoint-down: (
-  "small": f.em(699.98),
-  "medium": f.em(899.98),
-  "large": f.em(1439.98),
+  "small": f.em(374.98),
+  "medium": f.em(699.98),
+  "large": f.em(1023.98),
+  "xlarge": f.em(1439.98)
 );
 
 @mixin breakpoint-up($size) {
