--- a/app/scss/globals/_typography.scss
+++ b/app/scss/globals/_typography.scss
@@ -13,11 +13,7 @@ h3 {
 h1 {
   // font-size: calc(1.75rem + 1vw); ---> growth of font relative to 'vw'
   // font-size: clamp(1.75rem, (1.75rem + 1vw), 2.75rem); ---> 'better' approach with f-size 'clamping'
-  font-size: clamp(
-    u.rem(28),
-    (u.rem(28) + 1vw),
-    u.rem(42)
-  ); // ---> converting 'px' to 'rem' using 'rem()' from 'functions.scss/
+  font-size: clamp(u.rem(28), (u.rem(28) + 1vw), u.rem(42)); // ---> converting 'px' to 'rem' using 'rem()' from 'functions.scss/
 
   // @include u.breakpoint-up(medium) {
   //   font-size: 36px;
@@ -34,10 +30,5 @@ h2 {
 p {
   font-size: u.rem(16);
   margin-top: 0;
-}
-
-a,
-a:visited,
-a:active {
-  text-decoration: none;
+  color: u.$darkblue;
 }
