--- a/app/scss/util/_breakpoints.scss
+++ b/app/scss/util/_breakpoints.scss
@@ -15,7 +15,7 @@ $breakpoint-down: (
   "small": em(374.98),
   "medium": em(699.98),
   "large": em(1023.98),
-  "xlarge": em(1439.98)
+  "xlarge": em(1439.98),
 );
 
 @mixin breakpoint-up($size) {
